--- a/arch/arm/configs/mehmet_ve_defconfig
+++ b/arch/arm/configs/mehmet_ve_defconfig
@@ -382,7 +382,7 @@ CONFIG_EXYNOS_THERMAL=y
 CONFIG_EXYNOS4_SETUP_JPEG=y
 CONFIG_EXYNOS4_ENABLE_CLOCK_DOWN=y
 CONFIG_EXYNOS4_CPUFREQ=y
-# CONFIG_EXYNOS4X12_1500MHZ_SUPPORT is not set
+CONFIG_EXYNOS4X12_1500MHZ_SUPPORT=y
 CONFIG_EXYNOS4X12_1400MHZ_SUPPORT=y
 # CONFIG_EXYNOS4X12_1200MHZ_SUPPORT is not set
 # CONFIG_EXYNOS4X12_1000MHZ_SUPPORT is not set
